# pomp

./: README.md
libdisasm-0.23/: COPYING  ChangeLog  Makefile  Makefile.am  Makefile.in  README  TODO  aclocal.m4  autogen.sh  config.status  configure  configure.ac  libtool
libdisasm-0.23/doc/: Makefile  Makefile.am  Makefile.in  libdisasm.txt
libdisasm-0.23/libdisasm/: Makefile  Makefile.in  ia32_insn.c  ia32_modrm.c  ia32_opcode_tables.c  ia32_opcode_tables.h  ia32_operand.c  ia32_reg.c  libdis.h
libdisasm-0.23/libdisasm/.deps/: ia32_implicit.Plo  ia32_insn.Plo  ia32_invariant.Plo  ia32_modrm.Plo  ia32_opcode_tables.Plo  ia32_operand.Plo  ia32_reg.Plo  ia32_settings.Plo  x86_disasm.Plo  x86_format.Plo  x86_imm.Plo  x86_insn.Plo  x86_misc.Plo  x86_operand_list.Plo
libdisasm-0.23/man/: Makefile  Makefile.am  Makefile.in  libdisasm.7  x86_disasm.3  x86_format_insn.3  x86_init.3  x86dis.1
libdisasm-0.23/perl/: Makefile  Makefile.am  Makefile.in  build_opcode_map.pl  modify_opcode_map.pl  x86disasm.pl
libdisasm-0.23/test/: Makefile  Makefile.am  Makefile.in  README  asmdisasm.pl  ia32_test_insn.S  insn-test.c  quikdis.c  run-test.sh  testdis.c
libdisasm-0.23/x86dis/: Makefile  Makefile.am  Makefile.in  x86dis.c
libdisasm-0.23/x86dis/.deps/: x86dis.Po
reverse-from-coredump/: .gitignore  Makefile.am  README  README.md  configure.ac
reverse-from-coredump/include/: access_memory.h  analyze_result.h  bin_alias.h  common.h  disassemble.h  elf_binary.h  elf_core.h  global.h  heuristics.h  ia32_reg.h  inst_data.h  inst_opd.h  insthandler.h  list.h  re_alias.h  re_stackpointer.h  reverse_exe.h  reverse_instructions.h  reverse_log.h  solver.h  thread_selection.h
reverse-from-coredump/src/: Makefile.am  access_memory.c  alias_manager.c  analyze_result.c  bin_alias.c  common.c  disassemble.c  global.c  handler_arithmetic.c  handler_bit_manip.c  handler_comparison.c  handler_controlflow.c  handler_flag_manip.c  handler_interrupt.c  handler_logic.c  handler_move.c  handler_other.c  handler_sse.c  handler_stack.c  handler_string.c  handler_system.c  heuristics.c  inst_handle_resolve.c  instruction_resolver.c  process_binary.c  process_core.c  process_inst_data.c  process_thread.c  re_dsmanager.c  re_insttable.c  re_mem_alias.c  re_opdvalue.c  re_stack_pointer.c  reverse_execution.c  reverse_instructions.c  reverse_log.c  solver.c
reverse-from-coredump/testsuites/binutils/: binutils.inst  inst.reverse  instructions
reverse-from-coredump/testsuites/latex2rtf/: inst.reverse  instructions  latex2rtf.inst  reginfo.reverse  summary.lib
reverse-from-coredump/testsuites/latex2rtf/libs/: latex2rtf
