SUBDIRS=src
dist_doc_DATA=README

TESTSUITES_DIR = testsuites
EXECUTABLE=$(SUBDIRS)/reverse

latex2rtf:
	$(EXECUTABLE) $(TESTSUITES_DIR)/$@/core $(TESTSUITES_DIR)/$@/libs/ $(TESTSUITES_DIR)/$@/inst.reverse $(TESTSUITES_DIR)/$@/reginfo.reverse $(TESTSUITES_DIR)/$@/xmm.log $(TESTSUITES_DIR)/$@/summary.lib

aireplay-ng:
	$(EXECUTABLE) $(TESTSUITES_DIR)/$@/core $(TESTSUITES_DIR)/$@/libs/ $(TESTSUITES_DIR)/$@/inst.reverse $(TESTSUITES_DIR)/$@/reginfo.reverse $(TESTSUITES_DIR)/$@/xmm.log $(TESTSUITES_DIR)/$@/summary.lib

nasm:
	$(EXECUTABLE) $(TESTSUITES_DIR)/$@/core $(TESTSUITES_DIR)/$@/libs/ $(TESTSUITES_DIR)/$@/inst.reverse $(TESTSUITES_DIR)/$@/reginfo.reverse $(TESTSUITES_DIR)/$@/xmm.log $(TESTSUITES_DIR)/$@/summary.lib

gas:
	$(EXECUTABLE) $(TESTSUITES_DIR)/$@/core $(TESTSUITES_DIR)/$@/libs/ $(TESTSUITES_DIR)/$@/inst.reverse $(TESTSUITES_DIR)/$@/reginfo.reverse $(TESTSUITES_DIR)/$@/xmm.log $(TESTSUITES_DIR)/$@/summary.lib

gif2png:
	$(EXECUTABLE) $(TESTSUITES_DIR)/$@/core $(TESTSUITES_DIR)/$@/libs/ $(TESTSUITES_DIR)/$@/inst.reverse $(TESTSUITES_DIR)/$@/reginfo.reverse $(TESTSUITES_DIR)/$@/xmm.log $(TESTSUITES_DIR)/$@/summary.lib

unrar:
	$(EXECUTABLE) $(TESTSUITES_DIR)/$@/core $(TESTSUITES_DIR)/$@/libs/ $(TESTSUITES_DIR)/$@/inst.reverse $(TESTSUITES_DIR)/$@/reginfo.reverse $(TESTSUITES_DIR)/$@/xmm.log $(TESTSUITES_DIR)/$@/summary.lib

libpng:
	$(EXECUTABLE) $(TESTSUITES_DIR)/$@/core $(TESTSUITES_DIR)/$@/libs/ $(TESTSUITES_DIR)/$@/inst.reverse $(TESTSUITES_DIR)/$@/reginfo.reverse $(TESTSUITES_DIR)/$@/xmm.log $(TESTSUITES_DIR)/$@/summary.lib

libsmi:
	$(EXECUTABLE) $(TESTSUITES_DIR)/$@/core $(TESTSUITES_DIR)/$@/libs/ $(TESTSUITES_DIR)/$@/inst.reverse $(TESTSUITES_DIR)/$@/reginfo.reverse $(TESTSUITES_DIR)/$@/xmm.log $(TESTSUITES_DIR)/$@/summary.lib

prozilla:
	$(EXECUTABLE) $(TESTSUITES_DIR)/$@/core $(TESTSUITES_DIR)/$@/libs/ $(TESTSUITES_DIR)/$@/inst.reverse $(TESTSUITES_DIR)/$@/reginfo.reverse $(TESTSUITES_DIR)/$@/xmm.log $(TESTSUITES_DIR)/$@/summary.lib

ntpd:
	$(EXECUTABLE) $(TESTSUITES_DIR)/$@/core $(TESTSUITES_DIR)/$@/libs/ $(TESTSUITES_DIR)/$@/inst.reverse $(TESTSUITES_DIR)/$@/reginfo.reverse $(TESTSUITES_DIR)/$@/xmm.log $(TESTSUITES_DIR)/$@/summary.lib

nullhttp:
	$(EXECUTABLE) $(TESTSUITES_DIR)/$@/core $(TESTSUITES_DIR)/$@/libs/ $(TESTSUITES_DIR)/$@/inst.reverse $(TESTSUITES_DIR)/$@/reginfo.reverse $(TESTSUITES_DIR)/$@/xmm.log $(TESTSUITES_DIR)/$@/summary.lib

